syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.common";
option java_multiple_files = true;

package common;

message DefendSpellDescription {
  int32 defendSpellTemplateId = 1;
  int64 leftTime_ms = 2;
};
