syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

// common
import "common/player-data.proto";


message CastDefendSpellRequest {
  common.PlayerData playerData = 1;
  int32 towerId = 2;
  int32 defendSpellId = 3;
};
