syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

// common
import "common/player-data.proto";
// requests
import "requests/tower-attack-service/select-spell-type-request.proto";
import "requests/tower-attack-service/spell-curve-position-request.proto";


message SpellRequest {
  enum RequestType {
    SELECT_SPELL_TYPE = 0;
    DRAW_SPELL = 1;
    FINISH_SPELL = 2;
    CLEAR_CANVAS = 3;
  };

  common.PlayerData playerData = 1;
  int32 sessionId = 2;

  // common for all 3 types of request
  RequestType requestType = 3;
  // SELECT_SPELL_COLOR
  SelectSpellTypeRequest spellType = 4;
  // DRAW_SPELL
  SpellCurvePositionRequest drawSpell = 5;
  // FINISH_SPELL
  SpellCurvePositionRequest finishSpell = 6;
};
