syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// common
import "common/spell-type.proto";
import "common/player-data.proto";
import "common/spell-stat.proto";
// responses
import "responses/common/server-error.proto";


message MatchedSpellStatsResponse {
  response_models.ServerError error = 1;
  repeated common.SpellStat stats = 2;
  bool protectionWallDestroyed = 3;
};
