syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// common
import "common/vector2.proto";
import "common/spell-type.proto";
import "common/spell-stat.proto";
import "common/spell-description.proto";
import "common/defend-spell-description.proto";
// responses
import "responses/common/server-error.proto";
import "responses/common/current-canvas-state-response.proto";


message SpectateTowerAttackResponse {
  enum ResponseType {
    CURRENT_CANVAS_STATE = 0;
    SELECT_SPELL_TYPE = 1;
    DRAW_SPELL = 2;
    FINISH_SPELL = 3;
    CLEAR_CANVAS = 4; // does not require any additional data in response (serves as marker to clean canvas)
    COMPARE_ENCHANTMENTS = 5;
    ADD_DEFEND_SPELL = 6;
    REMOVE_DEFEND_SPELL = 7;
  };

  ResponseType responseType = 1;
  response_models.ServerError error = 2;

  // CURRENT_CANVAS_STATE
  response_models.CurrentCanvasStateResponse canvasState = 3;
  int64 leftTime_ms = 4;
  repeated common.DefendSpellDescription activeDefendSpells = 5;
  // SELECT_SPELL_COLOR
  common.SpellType spellType = 6;
  // DRAW_SPELL
  common.Vector2 spellPoint = 7;
  // FINISH_SPELL
  common.SpellDescription spellDescription = 8;
  // COMPARE_ENCHANTMENTS
  repeated common.SpellStat spellMatchStats = 9;
  bool ProtectionWallDestroyed = 10;
  // ADD|REMOVE_DEFEND_SPELL
  common.DefendSpellDescription updatedDefendSpell = 11;
};
